--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -5,13 +5,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Curso FlexBox</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div id="app">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-        </div>
+        <header id="main-header">
+            <div class="content">
+                <nav>
+                    <ul>
+                        <li><img src="/images/home.svg" alt="Home" /> Home</li>
+                        <li>
+                            <img
+                                src="/images/notification.svg"
+                                alt="Notification"
+                            />
+                            Notification
+                        </li>
+                        <li>
+                            <img src="/images/message.svg" alt="Messages" />
+                            Messages
+                        </li>
+                    </ul>
+                </nav>
+                <img src="/images/logo.svg" alt="Logo" />
+                <div class="side">
+                    <input type="text" placeholder="Search on Twitter" />
+                    <img src="/images/avatar.png" alt="" />
+                    <button>Tweet</button>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
