--- a/Conceitos/Introdução ao React/public/index.html
+++ b/Conceitos/Introdução ao React/public/index.html
@@ -7,6 +7,7 @@
         <title>Introdução ao React</title>
     </head>
     <body>
+        <div id="app"></div>
         <script src="./bundle.js"></script>
     </body>
 </html>
