Flexbox: Barra superior

--- a/Bônus/Flexbox/index.html
+++ b/Bônus/Flexbox/index.html
@@ -35,6 +35,31 @@
             </div>
         </header>
 
-        <div class="banner"></div>
+        <div class="banner">
+            <h1>Twitter Clone</h1>
+        </div>
+
+        <div class="bar">
+            <div class="content">
+                <ul>
+                    <li class="active">
+                        <span>Tweets</span>
+                        <strong>123</strong>
+                    </li>
+                    <li>
+                        <span>Followings</span>
+                        <strong>456</strong>
+                    </li>
+                    <li>
+                        <span>Favorities</span>
+                        <strong>789</strong>
+                    </li>
+                </ul>
+                <div class="actions">
+                    <button>Follow</button>
+                    <img src="/images/more.svg" alt="" />
+                </div>
+            </div>
+        </div>
     </body>
 </html>
