--- a/Bônus/Flexbox/index.html
+++ b/Bônus/Flexbox/index.html
@@ -61,5 +61,62 @@
                 </div>
             </div>
         </div>
+
+        <div class="wrapper-content content">
+            <aside class="profile">
+                <img class="avatar" src="/images/avatar.png" alt="cGm" />
+                <h1>Gabriel "CoGUMm"</h1>
+                <span>@CoGUMm</span>
+                <p>
+                    Mussum Ipsum, cacilds vidis litro abertis. Detraxit
+                    consequat et quo num tendi nada.
+                </p>
+                <ul class="list">
+                    <li><img src="/images/place.svg" alt="" /> Londrina</li>
+                    <li><img src="/images/url.svg" alt="" /> cogumm.net</li>
+                    <li>
+                        <img src="/images/joined.svg" alt="" /> Joined June 1900
+                    </li>
+                    <li><img src="/images/born.svg" alt="" /> 01/1/1900</li>
+                </ul>
+
+                <div class="widget followers">
+                    <strong>
+                        <img src="/images/followers.svg" alt="" /> 73 followers
+                        that you know
+                    </strong>
+
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+
+                <div class="widget images">
+                    <strong>
+                        <img src="/images/images.svg" alt="" /> 266 photos and
+                        videos
+                    </strong>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </aside>
+            <section class="timeline"></section>
+            <asite class="widgets"></asite>
+        </div>
     </body>
 </html>
