--- a/Bônus/Flexbox/index.html
+++ b/Bônus/Flexbox/index.html
@@ -116,7 +116,86 @@
                 </div>
             </aside>
             <section class="timeline"></section>
-            <asite class="widgets"></asite>
+            <asite class="widgets">
+                <aside class="widgets">
+                    <div class="widget follow">
+                        <div class="title">
+                            <strong>Who to Follow</strong>
+                            <a href="">Refresh</a>
+                            <a href="">View all</a>
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="profile">
+                                    <img
+                                        src="/images/avatar.png"
+                                        alt="Avatar"
+                                    />
+                                    <div class="info">
+                                        <strong
+                                            >Spade
+                                            <span>@spade_be</span></strong
+                                        >
+                                        <button>Follow</button>
+                                    </div>
+                                </div>
+                                <a href="">x</a>
+                            </li>
+                            <li>
+                                <div class="profile">
+                                    <img
+                                        src="/images/avatar.png"
+                                        alt="Avatar"
+                                    />
+                                    <div class="info">
+                                        <strong
+                                            >Spade
+                                            <span>@spade_be</span></strong
+                                        >
+                                        <button>Follow</button>
+                                    </div>
+                                </div>
+                                <a href="">x</a>
+                            </li>
+                            <li>
+                                <div class="profile">
+                                    <img
+                                        src="/images/avatar.png"
+                                        alt="Avatar"
+                                    />
+                                    <div class="info">
+                                        <strong
+                                            >Spade
+                                            <span>@spade_be</span></strong
+                                        >
+                                        <button>Follow</button>
+                                    </div>
+                                </div>
+                                <a href="">x</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="widget trends">
+                        <div class="title">
+                            <strong>Trends</strong>
+                            <a href="">Change</a>
+                        </div>
+                        <ul>
+                            <li>
+                                <a href="">#JavaScript</a>
+                                <a href="">#NodeJS</a>
+                                <a href="">#ReactJS</a>
+                                <a href="">#ReactNative</a>
+                                <a href="">#Angular</a>
+                                <a href="">#TypeScript</a>
+                                <a href="">#Android</a>
+                                <a href="">#IOS</a>
+                            </li>
+                        </ul>
+                    </div>
+                </aside>
+            </asite>
         </div>
     </body>
 </html>
