--- a/Bônus/Flexbox/index.html
+++ b/Bônus/Flexbox/index.html
@@ -115,7 +115,138 @@
                     </ul>
                 </div>
             </aside>
-            <section class="timeline"></section>
+
+            <section class="timeline">
+                <nav>
+                    <a href="" class="active">Tweets</a>
+                    <a href="">Tweets and replies</a>
+                    <a href="">Medias</a>
+                </nav>
+
+                <ul class="tweets">
+                    <li>
+                        <img src="/images/avatar.png" alt="Avatar" />
+                        <div class="info">
+                            <strong
+                                >Emerson Barbosa
+                                <span>@emersonbrs</span></strong
+                            >
+                            <p>Olá, esse é meu quarto tweet</p>
+                            <div class="actions">
+                                <a href=""
+                                    ><img
+                                        src="/images/comments.svg"
+                                        alt="Comments"
+                                    />
+                                    3</a
+                                >
+                                <a href=""
+                                    ><img
+                                        src="/images/retweet.svg"
+                                        alt="Retweet"
+                                    />
+                                    7</a
+                                >
+                                <a href=""
+                                    ><img src="/images/like.svg" alt="Like" />
+                                    45</a
+                                >
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="/images/avatar.png" alt="Avatar" />
+                        <div class="info">
+                            <strong
+                                >Emerson Barbosa
+                                <span>@emersonbrs</span></strong
+                            >
+                            <p>Olá, esse é meu terceiro tweet</p>
+                            <div class="actions">
+                                <a href=""
+                                    ><img
+                                        src="/images/comments.svg"
+                                        alt="Comments"
+                                    />
+                                    3</a
+                                >
+                                <a href=""
+                                    ><img
+                                        src="/images/retweet.svg"
+                                        alt="Retweet"
+                                    />
+                                    7</a
+                                >
+                                <a href=""
+                                    ><img src="/images/like.svg" alt="Like" />
+                                    45</a
+                                >
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="/images/avatar.png" alt="Avatar" />
+                        <div class="info">
+                            <strong
+                                >Emerson Barbosa
+                                <span>@emersonbrs</span></strong
+                            >
+                            <p>Olá, esse é meu segundo tweet</p>
+                            <div class="actions">
+                                <a href=""
+                                    ><img
+                                        src="/images/comments.svg"
+                                        alt="Comments"
+                                    />
+                                    3</a
+                                >
+                                <a href=""
+                                    ><img
+                                        src="/images/retweet.svg"
+                                        alt="Retweet"
+                                    />
+                                    7</a
+                                >
+                                <a href=""
+                                    ><img src="/images/like.svg" alt="Like" />
+                                    45</a
+                                >
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="/images/avatar.png" alt="Avatar" />
+                        <div class="info">
+                            <strong
+                                >Emerson Barbosa
+                                <span>@emersonbrs</span></strong
+                            >
+                            <p>Olá, esse é meu primeiro tweet</p>
+                            <div class="actions">
+                                <a href=""
+                                    ><img
+                                        src="/images/comments.svg"
+                                        alt="Comments"
+                                    />
+                                    3</a
+                                >
+                                <a href=""
+                                    ><img
+                                        src="/images/retweet.svg"
+                                        alt="Retweet"
+                                    />
+                                    7</a
+                                >
+                                <a href=""
+                                    ><img src="/images/like.svg" alt="Like" />
+                                    45</a
+                                >
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
             <asite class="widgets">
                 <aside class="widgets">
                     <div class="widget follow">
