--- a/Bônus/Flexbox/index.html
+++ b/Bônus/Flexbox/index.html
@@ -12,24 +12,19 @@
             <div class="content">
                 <nav>
                     <ul>
-                        <li><img src="/images/home.svg" alt="Home" /> Home</li>
+                        <li><img src="images/home.svg" alt="Home" /> Home</li>
                         <li>
-                            <img
-                                src="/images/notification.svg"
-                                alt="Notification"
-                            />
-                            Notification
+                            <img src="images/notification.svg" alt="Notification" /> Notification
                         </li>
                         <li>
-                            <img src="/images/message.svg" alt="Messages" />
-                            Messages
+                            <img src="images/message.svg" alt="Messages" /> Messages
                         </li>
                     </ul>
                 </nav>
-                <img src="/images/logo.svg" alt="Logo" />
+                <img src="images/logo.svg" alt="Logo" />
                 <div class="side">
                     <input type="text" placeholder="Search on Twitter" />
-                    <img src="/images/avatar.png" alt="" />
+                    <img src="images/avatar.png" alt="" />
                     <button>Tweet</button>
                 </div>
             </div>
@@ -57,14 +52,14 @@
                 </ul>
                 <div class="actions">
                     <button>Follow</button>
-                    <img src="/images/more.svg" alt="" />
+                    <img src="images/more.svg" alt="" />
                 </div>
             </div>
         </div>
 
         <div class="wrapper-content content">
             <aside class="profile">
-                <img class="avatar" src="/images/avatar.png" alt="cGm" />
+                <img class="avatar" src="images/avatar.png" alt="cGm" />
                 <h1>Gabriel "CoGUMm"</h1>
                 <span>@CoGUMm</span>
                 <p>
@@ -72,18 +67,17 @@
                     consequat et quo num tendi nada.
                 </p>
                 <ul class="list">
-                    <li><img src="/images/place.svg" alt="" /> Londrina</li>
-                    <li><img src="/images/url.svg" alt="" /> cogumm.net</li>
+                    <li><img src="images/place.svg" alt="" /> Londrina</li>
+                    <li><img src="images/url.svg" alt="" /> cogumm.net</li>
                     <li>
-                        <img src="/images/joined.svg" alt="" /> Joined June 1900
+                        <img src="images/joined.svg" alt="" /> Joined June 1900
                     </li>
-                    <li><img src="/images/born.svg" alt="" /> 01/1/1900</li>
+                    <li><img src="images/born.svg" alt="" /> 01/1/1900</li>
                 </ul>
 
                 <div class="widget followers">
                     <strong>
-                        <img src="/images/followers.svg" alt="" /> 73 followers
-                        that you know
+                        <img src="images/followers.svg" alt="" /> 73 followers that you know
                     </strong>
 
                     <ul>
@@ -102,8 +96,7 @@
 
                 <div class="widget images">
                     <strong>
-                        <img src="/images/images.svg" alt="" /> 266 photos and
-                        videos
+                        <img src="images/images.svg" alt="" /> 266 photos and videos
                     </strong>
                     <ul>
                         <li></li>
@@ -125,122 +118,50 @@
 
                 <ul class="tweets">
                     <li>
-                        <img src="/images/avatar.png" alt="Avatar" />
+                        <img src="images/avatar.png" alt="Avatar" />
                         <div class="info">
-                            <strong
-                                >Emerson Barbosa
-                                <span>@emersonbrs</span></strong
-                            >
+                            <strong>Gabriel "CoGUMm" <span>@cogumm</span></strong>
                             <p>Olá, esse é meu quarto tweet</p>
                             <div class="actions">
-                                <a href=""
-                                    ><img
-                                        src="/images/comments.svg"
-                                        alt="Comments"
-                                    />
-                                    3</a
-                                >
-                                <a href=""
-                                    ><img
-                                        src="/images/retweet.svg"
-                                        alt="Retweet"
-                                    />
-                                    7</a
-                                >
-                                <a href=""
-                                    ><img src="/images/like.svg" alt="Like" />
-                                    45</a
-                                >
+                                <a href=""><img src="images/comments.svg" alt="Comments" />3</a>
+                                <a href="" ><img src="images/retweet.svg" alt="Retweet" />7</a>
+                                <a href="" ><img src="images/like.svg" alt="Like" />45</a>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="/images/avatar.png" alt="Avatar" />
+                        <img src="images/avatar.png" alt="Avatar" />
                         <div class="info">
-                            <strong
-                                >Emerson Barbosa
-                                <span>@emersonbrs</span></strong
-                            >
+                            <strong>Gabriel "CoGUMm" <span>@cogumm</span></strong>
                             <p>Olá, esse é meu terceiro tweet</p>
                             <div class="actions">
-                                <a href=""
-                                    ><img
-                                        src="/images/comments.svg"
-                                        alt="Comments"
-                                    />
-                                    3</a
-                                >
-                                <a href=""
-                                    ><img
-                                        src="/images/retweet.svg"
-                                        alt="Retweet"
-                                    />
-                                    7</a
-                                >
-                                <a href=""
-                                    ><img src="/images/like.svg" alt="Like" />
-                                    45</a
-                                >
+                                <a href=""><img src="images/comments.svg" alt="Comments" />3</a>
+                                <a href="" ><img src="images/retweet.svg" alt="Retweet" />7</a>
+                                <a href="" ><img src="images/like.svg" alt="Like" />45</a>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="/images/avatar.png" alt="Avatar" />
+                        <img src="images/avatar.png" alt="Avatar" />
                         <div class="info">
-                            <strong
-                                >Emerson Barbosa
-                                <span>@emersonbrs</span></strong
-                            >
+                            <strong>Gabriel "CoGUMm" <span>@cogumm</span></strong>
                             <p>Olá, esse é meu segundo tweet</p>
                             <div class="actions">
-                                <a href=""
-                                    ><img
-                                        src="/images/comments.svg"
-                                        alt="Comments"
-                                    />
-                                    3</a
-                                >
-                                <a href=""
-                                    ><img
-                                        src="/images/retweet.svg"
-                                        alt="Retweet"
-                                    />
-                                    7</a
-                                >
-                                <a href=""
-                                    ><img src="/images/like.svg" alt="Like" />
-                                    45</a
-                                >
+                                <a href=""><img src="images/comments.svg" alt="Comments" />3</a>
+                                <a href="" ><img src="images/retweet.svg" alt="Retweet" />7</a>
+                                <a href="" ><img src="images/like.svg" alt="Like" />45</a>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <img src="/images/avatar.png" alt="Avatar" />
+                        <img src="images/avatar.png" alt="Avatar" />
                         <div class="info">
-                            <strong
-                                >Emerson Barbosa
-                                <span>@emersonbrs</span></strong
-                            >
+                            <strong>Gabriel "CoGUMm" <span>@cogumm</span></strong>
                             <p>Olá, esse é meu primeiro tweet</p>
                             <div class="actions">
-                                <a href=""
-                                    ><img
-                                        src="/images/comments.svg"
-                                        alt="Comments"
-                                    />
-                                    3</a
-                                >
-                                <a href=""
-                                    ><img
-                                        src="/images/retweet.svg"
-                                        alt="Retweet"
-                                    />
-                                    7</a
-                                >
-                                <a href=""
-                                    ><img src="/images/like.svg" alt="Like" />
-                                    45</a
-                                >
+                                <a href=""><img src="images/comments.svg" alt="Comments" />3</a>
+                                <a href="" ><img src="images/retweet.svg" alt="Retweet" />7</a>
+                                <a href="" ><img src="images/like.svg" alt="Like" />45</a>
                             </div>
                         </div>
                     </li>
@@ -258,15 +179,9 @@
                         <ul>
                             <li>
                                 <div class="profile">
-                                    <img
-                                        src="/images/avatar.png"
-                                        alt="Avatar"
-                                    />
+                                    <img src="images/avatar.png" alt="Avatar" />
                                     <div class="info">
-                                        <strong
-                                            >Spade
-                                            <span>@spade_be</span></strong
-                                        >
+                                        <strong>Spade <span>@spade_be</span></strong>
                                         <button>Follow</button>
                                     </div>
                                 </div>
@@ -274,15 +189,9 @@
                             </li>
                             <li>
                                 <div class="profile">
-                                    <img
-                                        src="/images/avatar.png"
-                                        alt="Avatar"
-                                    />
+                                    <img src="images/avatar.png" alt="Avatar" />
                                     <div class="info">
-                                        <strong
-                                            >Spade
-                                            <span>@spade_be</span></strong
-                                        >
+                                        <strong>Spade <span>@spade_be</span></strong>
                                         <button>Follow</button>
                                     </div>
                                 </div>
@@ -290,15 +199,9 @@
                             </li>
                             <li>
                                 <div class="profile">
-                                    <img
-                                        src="/images/avatar.png"
-                                        alt="Avatar"
-                                    />
+                                    <img src="images/avatar.png" alt="Avatar" />
                                     <div class="info">
-                                        <strong
-                                            >Spade
-                                            <span>@spade_be</span></strong
-                                        >
+                                        <strong>Spade <span>@spade_be</span></strong>
                                         <button>Follow</button>
                                     </div>
                                 </div>
