--- a/Jornada 2k20/GoBarber/GoBarber-web/public/index.html
+++ b/Jornada 2k20/GoBarber/GoBarber-web/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#FF9000" />
 
     <title>GoBarber</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet" />
 </head>
 
 <body>
